--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,28 @@ doctype html
 html
   head
     title NodeAuth
-    link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+      nav.navbar.navbar-inverse.navbar-fixed-top
+          .container
+              .navbar-header
+                  button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
+                      span.sr-only Toggle navigation
+                      span.icon-bar
+                      span.icon-bar
+                      span.icon-bar
+                  a.navbar-brand(href='/') Node Auth
+              #navbar.collapse.navbar-collapse
+                  ul.nav.navbar-nav
+                      li(class=(title === 'Home' ? 'active' : ''))
+                          a(href='/') Home
+                      li(class=(title === 'About' ? 'active' : ''))
+                          a(href='about') About
+                      li(class=(title === 'Contact' ? 'active' : ''))
+                          a(href='contact') Contact
+      .container
+          block content
+
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
+    script(src='../../dist/js/bootstrap.js')
