--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,14 +16,17 @@ html
                   a.navbar-brand(href='/') Node Auth
               #navbar.collapse.navbar-collapse
                   ul.nav.navbar-nav
-                      li(class=(title === 'Home' ? 'active' : ''))
+                      li(class=(title === 'Members' ? 'active' : ''))
                           a(href='/') Home
-                      li(class=(title === 'About' ? 'active' : ''))
-                          a(href='about') About
-                      li(class=(title === 'Contact' ? 'active' : ''))
-                          a(href='contact') Contact
+                      li(class=(title === 'Register' ? 'active' : ''))
+                          a(href='/users/register') Register
+                      li(class=(title === 'Login' ? 'active' : ''))
+                          a(href='/users/login') Log In
+                  ul.nav.navbar-nav.navbar-right
+                      li(class=(title === 'Logout' ? 'active' : ''))
+                          a(href='/users/logout') Logout
       .container
           block content
 
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
-    script(src='../../dist/js/bootstrap.js')
+    script(src='/javascripts/bootstrap.js')
