--- a/views/register.jade
+++ b/views/register.jade
@@ -3,6 +3,10 @@ extends layout
 block content
     h1 Register
     p Please Register using the form below
+    ul.errors
+        if errors
+            each error, i in errors
+                li.alert.alert-danger #{error.msg}
     form(method='post', action='/users/register', enttype='multipart/form-data')
         .form-group
             label Name
