--- a/views/login.jade
+++ b/views/login.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
     h1 Login
-    form(method='post', action='/users/register', enttype='multipart/form-data')
+    form(method='post', action='/users/login', enttype='multipart/form-data')
         .form-group
             label Username
             input.form-control(name='username', type='text', placeholder='Enter UserName')
