--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,8 @@ doctype html
 html
   head
     title NodeAuth
-    link(rel='stylesheet', href='/stylesheets/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap.css')
   body
       nav.navbar.navbar-inverse.navbar-fixed-top
           .container
@@ -17,15 +17,18 @@ html
               #navbar.collapse.navbar-collapse
                   ul.nav.navbar-nav
                       li(class=(title === 'Members' ? 'active' : ''))
-                          a(href='/') Home
-                      li(class=(title === 'Register' ? 'active' : ''))
+                          a(href='/') Members
+                      if !user
+                        li(class=(title === 'Register' ? 'active' : ''))
                           a(href='/users/register') Register
-                      li(class=(title === 'Login' ? 'active' : ''))
+                        li(class=(title === 'Login' ? 'active' : ''))
                           a(href='/users/login') Log In
                   ul.nav.navbar-nav.navbar-right
-                      li(class=(title === 'Logout' ? 'active' : ''))
+                      if user
+                        li(class=(title === 'Logout' ? 'active' : ''))
                           a(href='/users/logout') Logout
       .container
+          != messages()
           block content
 
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
